@@ -4,6 +4,8 @@ This software is distributed under the Apache License, Version 2.0, see LICENSE.
 
 Version: 2.0.0 (in development)
 - Change to the Apache License, Version 2.0.
+- Support Ubuntu 20.04 LTS.
+- Add "CANCEL" command to cancel the currently running backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin cancel backup")
 - Update "GET SERVERPREFS" command to check the status of parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin get serverprefs ParallelBackupEnabled")
 - Update "SET SERVERPREFS" command to enable or disable parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin set serverprefs ParallelBackupEnabled=false")
 - Change an error message when specifying the host name of Claris FileMaker Cloud with "--fqdn" option.
